--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,7 @@ html {
 body {
 	font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color: #000;
-	background: url(../images/bg1.jpg) no-repeat top center fixed;
+	background: url(../img/bg1.jpg) no-repeat top center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
